# JailBreakForge

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-RESEARCH.md
.planning/phases/02-attack-engine/: 02-01-PLAN.md  02-02-PLAN.md  02-RESEARCH.md
.planning/phases/03-target-connector/: 03-01-PLAN.md  03-02-PLAN.md  03-RESEARCH.md
.planning/phases/04-judge-storage/: 04-01-PLAN.md  04-02-PLAN.md  04-RESEARCH.md
.planning/phases/05-report-integration/: 05-01-PLAN.md  05-02-PLAN.md  05-RESEARCH.md
.planning/research/: STACK.md  SUMMARY.md
src/jailbreakforge/: __init__.py  attacker.py  cli.py  config.py  db.py  judge.py  models.py  pipeline.py  reporter.py  ui.py
src/jailbreakforge/providers/: __init__.py  base.py  factory.py  groq.py  openrouter.py
src/jailbreakforge/seeds/: __init__.py  character_hijacking.yaml  encoding.yaml  hypothetical_scenario.yaml  language_switching.yaml  logical_injection.yaml  multiturn_escalation.yaml  roleplay.yaml  system_prompt_extraction.yaml
src/jailbreakforge/targets/: __init__.py  anthropic.py  base.py  factory.py  generic.py  openai.py
src/jailbreakforge/templates/: __init__.py  report.md.j2
